refactor and fix bugs on restore feature