@@ -19,46 +19,36 @@
  ******************************************************************************/
 package biblivre.administration.backup;
 
+import static biblivre.core.SchemaThreadLocal.withGlobalSchema;
+
 import biblivre.administration.backup.exception.RestoreException;
 import biblivre.administration.setup.State;
 import biblivre.core.AbstractBO;
-import biblivre.core.SchemaThreadLocal;
 import biblivre.core.UpdatesDAO;
 import biblivre.core.exceptions.ValidationException;
+import biblivre.core.utils.CharPool;
 import biblivre.core.utils.Constants;
-import biblivre.core.utils.DatabaseUtils;
 import biblivre.core.utils.FileIOUtils;
 import biblivre.database.util.PostgreSQLStatementIterable;
 import biblivre.digitalmedia.DigitalMediaDAO;
-import java.io.BufferedReader;
-import java.io.BufferedWriter;
-import java.io.File;
-import java.io.IOException;
-import java.io.InputStream;
-import java.io.InputStreamReader;
-import java.io.OutputStreamWriter;
-import java.io.StringWriter;
+import java.io.*;
 import java.nio.charset.StandardCharsets;
 import java.nio.file.Files;
 import java.sql.Connection;
 import java.sql.SQLException;
 import java.sql.Statement;
-import java.util.Arrays;
-import java.util.HashMap;
-import java.util.Iterator;
-import java.util.List;
-import java.util.Map;
-import java.util.concurrent.Executor;
-import java.util.concurrent.Executors;
+import java.util.*;
+import java.util.function.Consumer;
 import java.util.regex.Matcher;
 import java.util.regex.Pattern;
-import java.util.stream.Collectors;
 import java.util.stream.Stream;
 import org.apache.commons.compress.archivers.zip.ZipArchiveEntry;
 import org.apache.commons.compress.archivers.zip.ZipFile;
 import org.apache.commons.io.FileUtils;
 import org.apache.commons.io.IOUtils;
 import org.json.JSONObject;
+import org.postgresql.PGConnection;
+import org.postgresql.copy.CopyManager;
 import org.slf4j.Logger;
 import org.slf4j.LoggerFactory;
 import org.springframework.beans.factory.annotation.Autowired;
@@ -69,56 +59,14 @@ public class RestoreBO extends AbstractBO {
     private static final String[] FILTERED_OUT_STATEMENT_PREFIXES =
             new String[] {"CREATE FUNCTION", "ALTER FUNCTION", "CREATE TRIGGER"};
 
-    private static final class BufferedReaderIterator implements Iterator<Character> {
-        private final BufferedReader bufferedReader;
-        int read;
+    private static final Pattern DIGITAL_MEDIA_FILE_PATTERN = Pattern.compile("^(\\d+)_(.*)$");
+    private static final Pattern LO_OPEN_COMMAND_PATTERN =
+            Pattern.compile("(.*lo_open\\(')(.*?)(',.*)");
 
-        private BufferedReaderIterator(BufferedReader bufferedReader) throws IOException {
-            this.bufferedReader = bufferedReader;
+    private static final Pattern LO_CREATE_COMMAND_PATTERN =
+            Pattern.compile("lo_create\\('(.*?)'\\)");
 
-            read = bufferedReader.read();
-        }
-
-        @Override
-        public Character next() {
-            char c = (char) read;
-
-            try {
-                read = bufferedReader.read();
-            } catch (IOException ioException) {
-                logger.error("error while reading script", ioException);
-
-                read = -1;
-            }
-
-            return c;
-        }
-
-        @Override
-        public boolean hasNext() {
-            return read != -1;
-        }
-    }
-
-    private static final String _DROP_SCHEMA_TPL = "DROP SCHEMA \"%s\" CASCADE;";
-    private static final String _DELETE_DIGITALMDIA_TPL = "DELETE FROM \"%s\".digital_media;";
-    private static final String _UPDATE_DIGITALMEDIA_BLOB_TPL =
-            "UPDATE digital_media SET blob = '%d' WHERE blob = '%d';";
-    private static final Pattern _FILE = Pattern.compile("^(\\d+)_(.*)$");
-    private static final String _UPDATE_DIGITALMEDIA_TPL =
-            "UPDATE digital_media SET blob = '%d' WHERE id = '%s';";
-    private static final String _ALTER_SCHEMA_TPL = "ALTER SCHEMA \"%s\" RENAME TO \"%s\";";
-    private static final String _DELETE_SCHEMA_TPL =
-            "DELETE FROM \"global\".schemas WHERE \"schema\" = '%s';";
-    private static final String _INSERT_SCHEMA_TPL =
-            "INSERT INTO \"global\".schemas (schema, name) VALUES ('%s', E'%s');";
-    private static final String _DELETE_FROM_SCHEMAS =
-            "DELETE FROM \"global\".schemas WHERE \"schema\" not in (SELECT schema_name FROM information_schema.schemata);";
-    private static final Pattern _LO_OPEN = Pattern.compile("(.*lo_open\\(')(.*?)(',.*)");
-
-    private static final Pattern _LO_CREATE = Pattern.compile("lo_create\\('(.*?)'\\)");
-
-    private static final String[] _BACKUP_EXTENSIONS = new String[] {"b4bz", "b5bz"};
+    private static final String[] ALLOWED_BACKUP_EXTENSIONS = new String[] {"b4bz", "b5bz"};
 
     private static final Logger logger = LoggerFactory.getLogger(RestoreBO.class);
 
@@ -126,77 +74,98 @@ public class RestoreBO extends AbstractBO {
 
     private BackupBO backupBO;
 
-    public List<RestoreDTO> list() {
-        File path = backupBO.getBackupDestination();
+    /**
+     * List all the backup files in the server backup destination.
+     *
+     * @return a list of RestoreOperation objects.
+     * @throws RestoreException if the backup files' integrity is compromised.
+     */
+    public List<RestoreOperation> list() throws RestoreException {
+        File serverBackupDestionation = getActualServerBackupDestionation();
 
-        if (path == null) {
-            path = FileUtils.getTempDirectory();
+        List<RestoreOperation> list = new ArrayList<>();
+
+        for (File backupFile :
+                FileUtils.listFiles(serverBackupDestionation, ALLOWED_BACKUP_EXTENSIONS, false)) {
+            RestoreOperation restoreOperation = RestoreBO.fromBackupMetadata(backupFile);
+
+            if (restoreOperation.isValid()) {
+                list.add(restoreOperation);
+            }
         }
 
-        if (path == null) {
-            throw new ValidationException(
-                    "administration.maintenance.backup.error.invalid_restore_path");
-        }
-
-        List<RestoreDTO> list =
-                FileUtils.listFiles(path, _BACKUP_EXTENSIONS, false).stream()
-                        .map(RestoreBO::toRestoreDTO)
-                        .filter(RestoreDTO::isValid)
-                        .collect(Collectors.toList());
-
-        _sortRestores(list);
+        sortRestores(list);
 
         return list;
     }
 
-    public boolean restore(RestoreDTO dto, RestoreDTO partial) throws IOException {
-
-        if (!_verifyDTO(dto)) {
+    /**
+     * Restore a backup file.
+     *
+     * @param restoreOperation the backup file to be restored.
+     * @param mediaRestoreOperation the media backup file to be restored.
+     * @return true if the restore was successful, false otherwise.
+     * @throws RestoreException if the backup file is corrupted.
+     */
+    public boolean restore(
+            RestoreOperation restoreOperation, RestoreOperation mediaRestoreOperation)
+            throws RestoreException {
+        if (isInvalid(restoreOperation)) {
             throw new ValidationException(
                     "administration.maintenance.backup.error." + "corrupted_backup_file");
         }
 
-        File tmpDir = FileIOUtils.unzip(dto.getBackup());
+        try {
+            File tempExplodedBackup = FileIOUtils.unzip(restoreOperation.getBackup());
 
-        String extension = _getExtension(dto);
+            String extension = getExtension(restoreOperation);
 
-        if (partial != null) {
-            _movePartialFiles(partial, tmpDir);
+            if (mediaRestoreOperation != null) {
+                movePartialFiles(mediaRestoreOperation, tempExplodedBackup);
+            }
+
+            countRestoreSteps(restoreOperation, tempExplodedBackup, extension);
+
+            boolean restoreBackup = restoreBackup(restoreOperation, tempExplodedBackup);
+
+            FileUtils.deleteQuietly(tempExplodedBackup);
+
+            return restoreBackup;
+        } catch (IOException e) {
+            throw new RestoreException(e);
         }
-
-        _countRestoreSteps(dto, tmpDir, extension);
-
-        boolean restoreBackup = this.restoreBackup(dto, tmpDir);
-
-        FileUtils.deleteQuietly(tmpDir);
-
-        return restoreBackup;
     }
 
-    public RestoreDTO getRestoreDTO(String filename) {
-        File path = backupBO.getBackupDestination();
+    /**
+     * Get a restore operation from a backup file.
+     *
+     * @param filename the backup file name.
+     * @return a RestoreOperation object from the backup file.
+     * @throws RestoreException if the backup file is not found.
+     */
+    public RestoreOperation getRestoreOperation(String filename) throws RestoreException {
+        File serverBackupDestionation = getActualServerBackupDestionation();
+
+        File backup = new File(serverBackupDestionation, filename);
+
+        if (!backup.exists()) {
+            throw new RestoreException(
+                    "administration.maintenance.backup.error.backup_file_not_found");
+        }
+
+        return fromBackupMetadata(backup);
+    }
+
+    private File getActualServerBackupDestionation() {
+        File path = backupBO.getServerBackupDestination();
 
         if (path == null) {
             path = FileUtils.getTempDirectory();
         }
-
-        File backup = new File(path, filename);
-        if (!backup.exists()) {
-            throw new ValidationException(
-                    "administration.maintenance.backup.error.backup_file_not_found");
-        }
-
-        RestoreDTO dto = toRestoreDTO(backup);
-
-        if (dto == null || !dto.isValid()) {
-            throw new ValidationException(
-                    "administration.maintenance.backup.error.corrupted_backup_file");
-        }
-
-        return dto;
+        return path;
     }
 
-    public static void processRestore(File restore) throws IOException {
+    public static void processRestore(File restore) throws RestoreException {
 
         if (restore == null) {
             logger.info("===== Skipping File 'null' =====");
@@ -204,28 +173,65 @@ public class RestoreBO extends AbstractBO {
         }
 
         if (!restore.exists()) {
-            logger.info("===== Skipping File '" + restore.getName() + "' =====");
+            logger.info(
+                    "===== Skipping File '{}' =====",
+                    restore.getName()); // NOPMD - suppressed GuardLogStatement - TODO explain
+            // reason for suppression
             return;
         }
 
-        logger.info("===== Restoring File '" + restore.getName() + "' =====");
+        logger.info("===== Restoring File '{}' =====", restore.getName());
 
         try (BufferedReader bufferedReader = Files.newBufferedReader(restore.toPath())) {
-            PostgreSQLStatementIterable postgreSQLStatementIterable =
-                    new PostgreSQLStatementIterable(new BufferedReaderIterator(bufferedReader));
-
-            postgreSQLStatementIterable.stream()
-                    .filter(RestoreBO::notFunctionOrTriggerRelated)
-                    .forEach(
-                            statement -> {
-                                _writeLine(statement);
-                                State.incrementCurrentStep();
+            ObservableIterator<Character> sourceIterator =
+                    new ObservableIterator<>(
+                            new BufferedReaderIterator(bufferedReader),
+                            c -> {
+                                if (c == CharPool.NEW_LINE) {
+                                    State.incrementCurrentStep();
+                                }
                             });
+
+            PostgreSQLStatementIterable postgreSQLStatementIterable =
+                    new PostgreSQLStatementIterable(sourceIterator);
+
+            for (String statement : postgreSQLStatementIterable) {
+                if (isFunctionOrTriggerRelated(statement)) {
+                    continue;
+                }
+
+                if (statement.startsWith("COPY ")) {
+                    executePostgresCopyCommand(statement, sourceIterator);
+
+                    continue;
+                }
+
+                writeLine(statement);
+            }
+        } catch (IOException e) {
+            throw new RestoreException(e);
         }
     }
 
-    public static boolean notFunctionOrTriggerRelated(String statement) {
-        return Arrays.stream(FILTERED_OUT_STATEMENT_PREFIXES).noneMatch(statement::startsWith);
+    private static void executePostgresCopyCommand(
+            String copyCommand, Iterator<Character> sourceIterator) throws RestoreException {
+        UpdatesDAO updatesDAO = UpdatesDAO.getInstance();
+
+        sourceIterator.next(); // Skip the first character (new line) of the COPY command
+
+        try (Connection connection = updatesDAO.beginUpdate()) {
+            PGConnection pgConnection = connection.unwrap(PGConnection.class);
+
+            CopyManager copyManager = pgConnection.getCopyAPI();
+
+            copyManager.copyIn(copyCommand, new PostgresCopyDataReader(sourceIterator));
+        } catch (SQLException | IOException e) {
+            throw new RestoreException(e);
+        }
+    }
+
+    public static boolean isFunctionOrTriggerRelated(String statement) {
+        return Arrays.stream(FILTERED_OUT_STATEMENT_PREFIXES).anyMatch(statement::startsWith);
     }
 
     @Autowired
@@ -238,146 +244,164 @@ public class RestoreBO extends AbstractBO {
         this.backupBO = backupBO;
     }
 
-    private synchronized boolean restoreBackup(RestoreDTO dto, File directory) {
+    private synchronized boolean restoreBackup(RestoreOperation dto, File explodedBackupDirectory)
+            throws RestoreException {
         Map<String, String> restoreSchemas = dto.getRestoreSchemas();
 
-        _validateRestoreSchemas(restoreSchemas);
+        validateRestoreSchemas(restoreSchemas);
 
         RestoreContextHelper context =
                 new RestoreContextHelper(dto, backupBO.listDatabaseSchemas());
 
         String globalSchema = Constants.GLOBAL_SCHEMA;
 
-        boolean transactional = true;
+        State.writeLog("Starting psql");
 
-        ProcessBuilder pb = _createProcessBuilder(transactional);
+        processSchemaRenames(context.getPreRenameSchemas());
 
-        try {
-            State.writeLog("Starting psql");
+        String extension = getExtension(dto);
 
-            Process p = pb.start();
-
-            _connectOutputToStateLogger(p);
-
-            try (BufferedWriter bw = _getBufferedWriter(p)) {
-
-                _processRenames(context.getPreRenameSchemas());
-
-                bw.flush();
-
-                String extension = _getExtension(dto);
-
-                if (restoreSchemas.containsKey(globalSchema)) {
-                    _processGlobalSchema(directory, extension);
-
-                    bw.flush();
-                }
-
-                for (String schema : restoreSchemas.keySet()) {
-                    if (!globalSchema.equals(schema)) {
-                        _processSchemaRestores(directory, extension, schema);
-
-                        bw.flush();
-                    }
-                }
-
-                _processRenames(context.getPostRenameSchemas());
-
-                bw.flush();
-
-                _processRenames(context.getRestoreRenamedSchemas());
-
-                bw.flush();
-
-                _postProcessDeletes(context.getDeleteSchemas(), bw);
-
-                bw.flush();
-
-                _postProcessRenames(dto, restoreSchemas, bw);
-
-                _writeLine(_DELETE_FROM_SCHEMAS);
-
-                _writeLine("ANALYZE");
-
-                bw.close();
-
-                p.waitFor();
-
-                return p.exitValue() == 0;
-            }
-        } catch (IOException | InterruptedException e) {
-            logger.error(e.getMessage(), e);
+        if (restoreSchemas.containsKey(globalSchema)) {
+            processGlobalSchema(explodedBackupDirectory, extension);
         }
 
-        return false;
+        for (String schema : restoreSchemas.keySet()) {
+            if (globalSchema.equals(schema)) {
+                continue;
+            }
+
+            processSchemaRestores(explodedBackupDirectory, extension, schema);
+        }
+
+        processSchemaRenames(context.getPostRenameSchemas());
+
+        processSchemaRenames(context.getRestoreRenamedSchemas());
+
+        postProcessDeletes(context.getDeleteSchemas());
+
+        postProcessRenames(dto, restoreSchemas);
+
+        removeNonExistingPGSchemaFromSchemasTable();
+
+        writeLine("ANALYZE");
+
+        logger.info("===== Restoring backup finished =====");
+
+        return true;
     }
 
-    private BufferedWriter _getBufferedWriter(Process p) {
-        OutputStreamWriter osw = new OutputStreamWriter(p.getOutputStream());
-
-        return new BufferedWriter(osw);
+    private static void removeNonExistingPGSchemaFromSchemasTable() throws RestoreException {
+        writeLine(
+                """
+            DELETE FROM "global".schemas WHERE "schema" not in (SELECT schema_name FROM information_schema.schemata)
+            """);
     }
 
-    private void _processGlobalSchema(File directory, String extension) throws IOException {
+    private void processGlobalSchema(File directory, String extension) throws RestoreException {
         State.writeLog("Processing schema for 'global'");
 
         File ddlFile = new File(directory, "global.schema." + extension);
 
-        processRestore(ddlFile);
+        withGlobalSchema(() -> processRestore(ddlFile));
 
         State.writeLog("Processing data for 'global'");
 
         File dmlFile = new File(directory, "global.data." + extension);
 
-        processRestore(dmlFile);
+        withGlobalSchema(() -> processRestore(dmlFile));
     }
 
-    private static void _postProcessRenames(
-            RestoreDTO dto, Map<String, String> restoreSchemas, BufferedWriter bw) {
+    private static void postProcessRenames(
+            RestoreOperation restoreOperation, Map<String, String> restoreSchemas)
+            throws RestoreException {
 
-        restoreSchemas.forEach(
-                (originalSchemaName, finalSchemaName) -> {
-                    if (!Constants.GLOBAL_SCHEMA.equals(finalSchemaName)) {
-                        String schemaTitle;
+        for (Map.Entry<String, String> entry : restoreSchemas.entrySet()) {
+            String targetSchemaName = entry.getValue();
 
-                        schemaTitle = dto.getSchemas().get(originalSchemaName).getLeft();
+            if (Constants.GLOBAL_SCHEMA.equals(targetSchemaName)) {
+                continue;
+            }
 
-                        schemaTitle = schemaTitle.replaceAll("'", "''").replaceAll("\\\\", "\\\\");
+            String sourceSchemaName = entry.getKey();
 
-                        _writeLine(String.format(_DELETE_SCHEMA_TPL, finalSchemaName));
+            String escapedSchemaTitle = getEscapedSchemaTitle(restoreOperation, sourceSchemaName);
 
-                        _writeLine(_buildInsertSchemaQuery(finalSchemaName, schemaTitle));
-                    }
-                });
+            deleteSchemaFromSchemasTable(sourceSchemaName);
+
+            addSchemaToSchemaTable(targetSchemaName, escapedSchemaTitle);
+        }
     }
 
-    private static void _postProcessDeletes(Map<String, String> deleteSchemas, BufferedWriter bw) {
-
-        deleteSchemas.forEach(
-                (originalSchemaName, schemaToBeDeleted) -> {
-                    State.writeLog("Droping schema " + schemaToBeDeleted);
-
-                    String globalSchema = Constants.GLOBAL_SCHEMA;
-
-                    if (!globalSchema.equals(originalSchemaName)) {
-                        _writeLine(String.format(_DELETE_DIGITALMDIA_TPL, schemaToBeDeleted));
-                    }
-
-                    _writeLine(String.format(_DROP_SCHEMA_TPL, schemaToBeDeleted));
-
-                    if (!globalSchema.equals(originalSchemaName)) {
-                        _writeLine(String.format(_DELETE_SCHEMA_TPL, originalSchemaName));
-                    }
-                });
+    private static void addSchemaToSchemaTable(String targetSchemaName, String escapedSchemaTitle)
+            throws RestoreException {
+        writeLine(buildInsertSchemaQuery(targetSchemaName, escapedSchemaTitle));
     }
 
-    private static String _buildInsertSchemaQuery(String finalSchemaName, String schemaTitle) {
+    private static String getEscapedSchemaTitle(
+            RestoreOperation restoreOperation, String sourceSchemaName) {
+        String schemaTitle = restoreOperation.getSchemas().get(sourceSchemaName).getLeft();
 
-        return String.format(_INSERT_SCHEMA_TPL, finalSchemaName, schemaTitle);
+        // Escape single quotes and backslashes
+        return schemaTitle.replaceAll("'", "''").replaceAll("\\\\", "\\\\");
     }
 
-    private void _processSchemaRestores(File path, String extension, String schema)
-            throws IOException {
+    private static void postProcessDeletes(Map<String, String> deleteSchemas)
+            throws RestoreException {
+        for (Map.Entry<String, String> entry : deleteSchemas.entrySet()) {
+            String originalSchemaName = entry.getKey();
+
+            String schemaToBeDeleted = entry.getValue();
+
+            State.writeLog("Droping schema " + schemaToBeDeleted);
+
+            String globalSchema = Constants.GLOBAL_SCHEMA;
+
+            if (!globalSchema.equals(originalSchemaName)) {
+                deleteAllDigitalMedia(schemaToBeDeleted);
+            }
+
+            dropSchema(schemaToBeDeleted);
+
+            if (!globalSchema.equals(originalSchemaName)) {
+                deleteSchemaFromSchemasTable(originalSchemaName);
+            }
+        }
+    }
+
+    private static void deleteSchemaFromSchemasTable(String originalSchemaName)
+            throws RestoreException {
+        writeLine(
+                """
+            DELETE FROM "global".schemas WHERE "schema" = '%s'
+            """
+                        .formatted(originalSchemaName));
+    }
+
+    private static void dropSchema(String schemaToBeDeleted) throws RestoreException {
+        writeLine(
+                """
+            DROP SCHEMA "%s" CASCADE
+            """
+                        .formatted(schemaToBeDeleted));
+    }
+
+    private static void deleteAllDigitalMedia(String schemaToBeDeleted) throws RestoreException {
+        writeLine(
+                """
+            DELETE FROM "%s".digital_media
+            """
+                        .formatted(schemaToBeDeleted));
+    }
+
+    private static String buildInsertSchemaQuery(String finalSchemaName, String schemaTitle) {
+        return """
+            INSERT INTO "global".schemas (schema, name) VALUES ('%s', E'%s');
+            """
+                .formatted(finalSchemaName, schemaTitle);
+    }
+
+    private void processSchemaRestores(File path, String extension, String schema)
+            throws RestoreException {
 
         State.writeLog("Processing schema for '" + schema + "'");
 
@@ -393,115 +417,111 @@ public class RestoreBO extends AbstractBO {
         this.processMediaRestoreFolder(new File(path, schema));
     }
 
-    private static void _processRenames(Map<String, String> preRenameSchemas) {
+    private static void processSchemaRenames(Map<String, String> preRenameSchemas)
+            throws RestoreException {
+        for (Map.Entry<String, String> entry : preRenameSchemas.entrySet()) {
+            String originalSchemaName = entry.getKey();
 
-        preRenameSchemas.forEach(
-                (originalSchemaName, finalSchemaName) -> {
-                    State.writeLog(
-                            String.format(
-                                    "Renaming schema %s to %s",
-                                    originalSchemaName, finalSchemaName));
+            String finalSchemaName = entry.getValue();
 
-                    _writeLine(
-                            String.format(_ALTER_SCHEMA_TPL, originalSchemaName, finalSchemaName));
-                });
-    }
+            State.writeLog(
+                    "Renaming schema %s to %s".formatted(originalSchemaName, finalSchemaName));
 
-    private static void _validateRestoreSchemas(Map<String, String> restoreSchemas) {
-
-        if (restoreSchemas == null || restoreSchemas.size() == 0) {
-            throw new ValidationException(
-                    "administration.maintenance.backup.error.no_schema_selected");
+            changePGSchemaName(originalSchemaName, finalSchemaName);
         }
     }
 
-    private void _connectOutputToStateLogger(Process p) {
-        Executor executor = Executors.newSingleThreadScheduledExecutor();
-
-        executor.execute(
-                () -> {
-                    String outputLine;
-
-                    try (InputStreamReader input =
-                                    new InputStreamReader(
-                                            p.getInputStream(), Constants.DEFAULT_CHARSET);
-                            BufferedReader br = new BufferedReader(input)) {
-                        while ((outputLine = br.readLine()) != null) {
-                            State.writeLog(outputLine);
-                        }
-                    } catch (Exception e) {
-                        logger.error("error while restoring backup", e);
-                    }
-                });
+    private static void changePGSchemaName(String originalSchemaName, String finalSchemaName)
+            throws RestoreException {
+        writeLine(
+                """
+                ALTER SCHEMA "%s" RENAME TO "%s"
+                """
+                        .formatted(originalSchemaName, finalSchemaName));
     }
 
-    private static RestoreDTO toRestoreDTO(File backup) {
-        RestoreDTO dto = null;
+    private static void validateRestoreSchemas(Map<String, String> restoreSchemas) {
+        if (restoreSchemas != null && !restoreSchemas.isEmpty()) {
+            return;
+        }
 
+        throw new ValidationException("administration.maintenance.backup.error.no_schema_selected");
+    }
+
+    /**
+     * Get a restore operation from a backup file.
+     *
+     * @param backup the backup file.
+     * @return a RestoreOperation object from the backup file based on the contents of the
+     *     backup.meta file inside the backup.
+     * @throws RestoreException if the backup file can't be read.
+     */
+    private static RestoreOperation fromBackupMetadata(File backup) throws RestoreException {
         try (ZipFile zipFile = new ZipFile(backup)) {
             ZipArchiveEntry metadata = zipFile.getEntry("backup.meta");
 
             if (metadata == null || !zipFile.canReadEntryData(metadata)) {
-                return null;
+                throw new RestoreException("Can't read metadata from zip file");
             }
 
             try (InputStream content = zipFile.getInputStream(metadata)) {
-                StringWriter writer = new StringWriter();
+                JSONObject json = getJsonObject(content);
 
-                IOUtils.copy(content, writer, StandardCharsets.UTF_8);
-
-                JSONObject json = new JSONObject(writer.toString());
-
-                dto = new RestoreDTO(json);
+                RestoreOperation dto = new RestoreOperation(json);
 
                 dto.setBackup(backup);
+
+                return dto;
             }
-        } catch (Exception e) {
-            logger.error("Can't read zip file", e);
-            dto = new RestoreDTO();
-            dto.setValid(false);
-        } finally {
-            if (dto != null) {
-                dto.setBackup(backup);
-            }
+        } catch (IOException ioException) {
+            logger.error("Can't read zip file", ioException);
+
+            throw new RestoreException(ioException);
         }
-
-        return dto;
     }
 
-    private void processMediaRestoreFolder(File path) {
+    private static JSONObject getJsonObject(InputStream content) throws IOException {
+        StringWriter writer = new StringWriter();
+
+        IOUtils.copy(content, writer, StandardCharsets.UTF_8);
+
+        return new JSONObject(writer.toString());
+    }
+
+    private void processMediaRestoreFolder(File path) throws RestoreException {
         if (path == null) {
             logger.info("===== Skipping File 'null' =====");
             return;
         }
 
         if (!path.exists() || !path.isDirectory()) {
-            logger.info("===== Skipping File '" + path.getName() + "' =====");
+            logger.info("===== Skipping File '{}' =====", path.getName());
             return;
         }
 
-        SchemaThreadLocal.withGlobalSchema(
-                () -> {
-                    for (File file : path.listFiles()) {
-                        Matcher fileMatcher = _FILE.matcher(file.getName());
+        for (File file : Objects.requireNonNull(path.listFiles())) {
+            Matcher fileMatcher = DIGITAL_MEDIA_FILE_PATTERN.matcher(file.getName());
 
-                        if (fileMatcher.find()) {
-                            String mediaId = fileMatcher.group(1);
+            if (!fileMatcher.find()) {
+                continue;
+            }
 
-                            long oid = digitalMediaDAO.importFile(file);
+            logger.info("===== Restoring File '{}' =====", file.getName());
 
-                            String newLine = _buildUpdateDigitalMediaQuery(mediaId, oid);
+            String mediaId = fileMatcher.group(1);
 
-                            _writeLine(newLine);
-                        }
-                    }
+            long oid = digitalMediaDAO.importFile(file);
 
-                    return null;
-                });
+            State.incrementCurrentStep();
+
+            String newLine = buildUpdateDigitalMediaQuery(mediaId, oid);
+
+            writeLine(newLine);
+        }
     }
 
-    private String _buildUpdateDigitalMediaQuery(String mediaId, long oid) {
-        return String.format(_UPDATE_DIGITALMEDIA_TPL, oid, mediaId);
+    private String buildUpdateDigitalMediaQuery(String mediaId, long oid) {
+        return "UPDATE digital_media SET blob = '%d' WHERE id = '%s';".formatted(oid, mediaId);
     }
 
     private void processMediaRestore(File restore, String schema) throws RestoreException {
@@ -512,145 +532,130 @@ public class RestoreBO extends AbstractBO {
         }
 
         if (!restore.exists()) {
-            logger.info("===== Skipping File '" + restore.getName() + "' =====");
+            logger.info("===== Skipping File '{}' =====", restore.getName());
             return;
         }
 
-        logger.info("===== Restoring File '" + restore.getName() + "' =====");
+        logger.info("===== Restoring File '{}' =====", restore.getName());
 
-        try (Stream<String> lines = Files.lines(restore.toPath())) {
-            // Since PostgreSQL uses global OIDs for LargeObjects, we can't simply
-            // restore a digital_media backup. To prevent oid conflicts, we will create
-            // a new oid, replacing the old one.
+        try (BufferedReader bufferedReader = Files.newBufferedReader(restore.toPath())) {
+            ObservableIterator<Character> sourceIterator =
+                    new ObservableIterator<>(
+                            new BufferedReaderIterator(bufferedReader),
+                            (c) -> {
+                                if (c == CharPool.NEW_LINE) {
+                                    State.incrementCurrentStep();
+                                }
+                            });
+
+            PostgreSQLStatementIterable postgreSQLStatementIterable =
+                    new PostgreSQLStatementIterable(sourceIterator);
 
             Map<Long, Long> oidMap = new HashMap<>();
 
-            lines.forEach(
-                    line -> {
-                        State.incrementCurrentStep();
+            for (String statement : postgreSQLStatementIterable) {
+                if (statement.startsWith("COPY ")) {
+                    executePostgresCopyCommand(statement, sourceIterator);
 
-                        _processLOLine(line, oidMap);
-                    });
+                    continue;
+                }
 
-            _writeLine("SET search_path = \"" + schema + "\", pg_catalog;");
+                processLOLine(statement, oidMap, sourceIterator);
+            }
 
-            oidMap.forEach(
-                    (oid, newOid) -> {
-                        String query = _buildUpdateDigitalMediaQuery(oid, newOid);
+            setPGSearchPath(schema);
 
-                        _writeLine(query);
-                    });
-        } catch (Exception e) {
+            for (Map.Entry<Long, Long> entry : oidMap.entrySet()) {
+                String query = buildUpdateDigitalMediaQuery(entry.getKey(), entry.getValue());
+
+                writeLine(query);
+            }
+        } catch (IOException e) {
             throw new RestoreException(e);
         }
     }
 
-    private void _processLOLine(String line, Map<Long, Long> oidMap) {
+    private static void setPGSearchPath(String schema) throws RestoreException {
+        writeLine(
+                """
+            SET search_path = "%s", pg_catalog
+            """
+                        .formatted(schema));
+    }
+
+    private void processLOLine(
+            String line, Map<Long, Long> oidMap, Iterator<Character> sourceIterator)
+            throws RestoreException {
 
         if (line.startsWith("SELECT pg_catalog.lo_create")) {
-            _processNewOid(line, oidMap);
+            processNewOid(line, oidMap);
         } else if (line.startsWith("SELECT pg_catalog.lo_open")) {
-            _processsOpenOid(line, oidMap);
-        } else if (!_ignoreLine(line)) {
+            processsOpenOid(line, oidMap);
+        } else if (!ignoreLine(line)) {
             if (line.startsWith("COPY")) {
+                executePostgresCopyCommand(line, sourceIterator);
+
                 logger.info(line);
+
+                return;
             }
 
-            _writeLine(line);
+            writeLine(line);
         }
     }
 
-    private static void _processsOpenOid(String line, Map<Long, Long> oidMap) {
-        Matcher loOpenMatcher = _LO_OPEN.matcher(line);
+    private static void processsOpenOid(String line, Map<Long, Long> oidMap)
+            throws RestoreException {
+        Matcher loOpenMatcher = LO_OPEN_COMMAND_PATTERN.matcher(line);
 
-        if (loOpenMatcher.find()) {
-            Long oid = Long.valueOf(loOpenMatcher.group(2));
-
-            String newLine = loOpenMatcher.replaceFirst("$1" + oidMap.get(oid) + "$3");
-
-            _writeLine(newLine);
+        if (!loOpenMatcher.find()) {
+            return;
         }
+
+        Long oid = Long.valueOf(loOpenMatcher.group(2));
+
+        String newLine = loOpenMatcher.replaceFirst("$1" + oidMap.get(oid) + "$3");
+
+        writeLine(newLine);
     }
 
-    private void _processNewOid(String line, Map<Long, Long> oidMap) {
-        Matcher loCreateMatcher = _LO_CREATE.matcher(line);
+    private void processNewOid(String line, Map<Long, Long> oidMap) {
+        Matcher loCreateMatcher = LO_CREATE_COMMAND_PATTERN.matcher(line);
 
         if (loCreateMatcher.find()) {
             Long currentOid = Long.valueOf(loCreateMatcher.group(1));
 
             Long newOid = digitalMediaDAO.createOID();
 
-            logger.info("Creating new OID (old: " + currentOid + ", new: " + newOid + ")");
+            logger.info("Creating new OID (old: {}, new: {})", currentOid, newOid);
 
             oidMap.put(currentOid, newOid);
         }
     }
 
-    private static boolean _ignoreLine(String line) {
+    private static boolean ignoreLine(String line) {
         return line.startsWith("ALTER LARGE OBJECT")
                 || line.startsWith("BEGIN;")
                 || line.startsWith("COMMIT;");
     }
 
-    private static String _buildUpdateDigitalMediaQuery(long oid, long newOid) {
-        return String.format(_UPDATE_DIGITALMEDIA_BLOB_TPL, newOid, oid);
+    private static String buildUpdateDigitalMediaQuery(long oid, long newOid) {
+        return "UPDATE digital_media SET blob = '%d' WHERE blob = '%d';".formatted(newOid, oid);
     }
 
-    private ProcessBuilder _createProcessBuilder(boolean transactional) {
-        File psql = DatabaseUtils.getPsql();
-
-        if (psql == null) {
-            throw new ValidationException("administration.maintenance.backup.error.psql_not_found");
-        }
-
-        String[] commands;
-
-        if (transactional) {
-            commands =
-                    new String[] {
-                        psql.getAbsolutePath(),
-                        "--single-transaction",
-                        "--host",
-                        DatabaseUtils.getDatabaseHostName(),
-                        "--port",
-                        DatabaseUtils.getDatabasePort(),
-                        "-v",
-                        "ON_ERROR_STOP=1",
-                        "--file",
-                        "-",
-                    };
-        } else {
-            commands =
-                    new String[] {
-                        psql.getAbsolutePath(),
-                        "--host",
-                        DatabaseUtils.getDatabaseHostName(),
-                        "--port",
-                        DatabaseUtils.getDatabasePort(),
-                        "-v",
-                        "ON_ERROR_STOP=1",
-                        "--file",
-                        "-",
-                    };
-        }
-
-        ProcessBuilder pb = new ProcessBuilder(commands);
-
-        pb.redirectErrorStream(true);
-
-        return pb;
-    }
-
-    private static void _countRestoreSteps(RestoreDTO dto, File tmpDir, String extension)
-            throws IOException {
+    private static void countRestoreSteps(RestoreOperation dto, File tmpDir, String extension)
+            throws RestoreException {
         long steps = 0;
 
         for (String schema : dto.getRestoreSchemas().keySet()) {
-            steps += FileIOUtils.countLines(new File(tmpDir, schema + ".schema." + extension));
-            steps += FileIOUtils.countLines(new File(tmpDir, schema + ".data." + extension));
+            steps += getSteps(tmpDir, schema + ".schema." + extension);
 
-            if (!schema.equals(Constants.GLOBAL_SCHEMA)) {
-                steps += FileIOUtils.countLines(new File(tmpDir, schema + ".media." + extension));
+            steps += getSteps(tmpDir, schema + ".data." + extension);
+
+            if (!Constants.GLOBAL_SCHEMA.equals(schema)) {
+                steps += getSteps(tmpDir, schema + ".media." + extension);
+
+                steps += getStepsFromMediaFolder(tmpDir, schema);
             }
         }
 
@@ -663,12 +668,32 @@ public class RestoreBO extends AbstractBO {
                         + " SQL lines");
     }
 
-    private static void _movePartialFiles(RestoreDTO partial, File tmpDir) {
-        try {
-            File partialTmpDir = FileIOUtils.unzip(partial.getBackup());
+    private static long getStepsFromMediaFolder(File tmpDir, String schema) {
+        File mediaFolder = new File(tmpDir, schema);
 
-            for (File partialFile : partialTmpDir.listFiles()) {
-                if (partialFile.getName().equals("backup.meta")) {
+        if (!mediaFolder.exists() || !mediaFolder.isDirectory()) {
+            return 0;
+        }
+
+        return Arrays.stream(Objects.requireNonNull(mediaFolder.listFiles()))
+                .filter(file -> DIGITAL_MEDIA_FILE_PATTERN.matcher(file.getName()).find())
+                .count();
+    }
+
+    private static long getSteps(File tmpDir, String fileName) throws RestoreException {
+        try (Stream<String> lines = Files.lines(new File(tmpDir, fileName).toPath())) {
+            return lines.count();
+        } catch (IOException e) {
+            throw new RestoreException(e);
+        }
+    }
+
+    private static void movePartialFiles(RestoreOperation partial, File tmpDir) {
+        try {
+            File explodedBackupDir = FileIOUtils.unzip(partial.getBackup());
+
+            for (File partialFile : Objects.requireNonNull(explodedBackupDir.listFiles())) {
+                if ("backup.meta".equals(partialFile.getName())) {
                     FileUtils.deleteQuietly(partialFile);
                 } else if (partialFile.isDirectory()) {
                     FileUtils.moveDirectoryToDirectory(partialFile, tmpDir, true);
@@ -677,14 +702,14 @@ public class RestoreBO extends AbstractBO {
                 }
             }
 
-            FileUtils.deleteQuietly(partialTmpDir);
-        } catch (Exception e) {
+            FileUtils.deleteQuietly(explodedBackupDir);
+        } catch (IOException ioException) {
             throw new ValidationException(
-                    "administration.maintenance.backup.error.couldnt_unzip_backup", e);
+                    "administration.maintenance.backup.error.couldnt_unzip_backup", ioException);
         }
     }
 
-    private static void _sortRestores(List<RestoreDTO> list) {
+    private static void sortRestores(List<RestoreOperation> list) {
         list.sort(
                 (restore1, restore2) -> {
                     if (restore2 == null) {
@@ -705,25 +730,43 @@ public class RestoreBO extends AbstractBO {
                 });
     }
 
-    private static boolean _verifyDTO(RestoreDTO dto) {
-        return dto.isValid() && dto.getBackup() != null && dto.getBackup().exists();
+    private static boolean isInvalid(RestoreOperation dto) {
+        return !dto.isValid() || dto.getBackup() == null || !dto.getBackup().exists();
     }
 
-    private static String _getExtension(RestoreDTO dto) {
+    private static String getExtension(RestoreOperation dto) {
         return dto.getBackup().getPath().endsWith("b5bz") ? "b5b" : "b4b";
     }
 
-    private static void _writeLine(String newLine) {
+    private static void writeLine(String newLine) throws RestoreException {
         UpdatesDAO updatesDAO = UpdatesDAO.getInstance();
 
-        try (Connection con = updatesDAO.beginUpdate()) {
-            Statement statement = con.createStatement();
+        try (Connection connection = updatesDAO.beginUpdate()) {
+            Statement statement = connection.createStatement();
 
             statement.execute(newLine);
 
-            con.commit();
-        } catch (SQLException ioe) {
-            throw new RestoreException(ioe);
+            connection.commit();
+        } catch (SQLException e) {
+            throw new RestoreException(e);
+        }
+    }
+
+    private record ObservableIterator<T>(Iterator<T> iterator, Consumer<T> inspector)
+            implements Iterator<T> {
+
+        @Override
+        public boolean hasNext() {
+            return iterator.hasNext();
+        }
+
+        @Override
+        public T next() {
+            T next = iterator.next();
+
+            inspector.accept(next);
+
+            return next;
         }
     }
 }
